--- a/data-analyst.html
+++ b/data-analyst.html
@@ -71,6 +71,10 @@
   
 	
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/carfax/job/ovcsbfw4'>CARFAX Careers - Data Quality Analyst</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/datacom.co.nz/c4a6638a-f1e9-40c6-a8cb-f14ad8e1776e'>Datacom - Service Desk Analyst - Auckland</a></h5> 
 <p><span class="badge badge-light">Auckland  Auckland  Auckland</span></p>
 <p>Posted on: 2019-10-31</p>
@@ -117,7 +121,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698571404-principal-analyst-statistical-programming-r-d-'>Biogen Principal Analyst, Statistical Programming (R&D) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698571404-principal-analyst-statistical-programming-r-d-'>Biogen Principal Analyst, Statistical Programming (R&D) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -141,7 +145,7 @@
 <p><span class="badge badge-light">United States  Portland, OR</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://4re.referrals.selectminds.com/jobs/data-analyst-lexisnexis-risk-solutions-cardiff-27560'>Data Analyst - LexisNexis Risk Solutions  - Cardiff - RELX Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/jobs/data-analyst-lexisnexis-risk-solutions-cardiff-27560'>Data Analyst - LexisNexis Risk Solutions  - Cardiff - RELX Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -201,7 +205,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/medidata-solutions/job/odssbfw2'>Medidata Solutions Careers - Data Intelligence Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/medidata-solutions/job/odssbfw2'>Medidata Solutions Careers - Data Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -313,7 +317,7 @@
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/the-climate-corporation/job/oKPpbfwT'>The Climate Corporation Careers - Intern: Data Analyst (Summer 2020)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/the-climate-corporation/job/oKPpbfwT'>The Climate Corporation Careers - Intern: Data Analyst (Summer 2020)</a></h5> 
 <p><span class="badge badge-light">San Francisco, California  Seattle, Washington</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -325,7 +329,7 @@
 <p><span class="badge badge-light">Pleasanton, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://aberdeen.applytojob.com/apply/rw2Vxx93cC/Data-Analyst'>Data Analyst - Aberdeen - Career Page</a></h5> 
+<h5><a href='http://aberdeen.applytojob.com/apply/rw2Vxx93cC/Data-Analyst'>Data Analyst - Aberdeen - Career Page</a></h5> 
 <p><span class="badge badge-light">Waltham, MA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -349,7 +353,7 @@
 <p><span class="badge badge-light">New York, NY New York, NY</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.hbs.edu/recruiting/data/Pages/default.aspx?sf111482827=1'>
+<h5><a href='https://www.hbs.edu/recruiting/data/Pages/default.aspx?sf111482827=1'>
 	MBA Student Data &amp; Statistics - Recruiting - Harvard Business School
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -397,7 +401,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999698364649-business-data-analyst-level-4'>Visa Business/Data Analyst - Level 4 | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698364649-business-data-analyst-level-4'>Visa Business/Data Analyst - Level 4 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -461,7 +465,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://doxo.recruiterbox.com/jobs/fk01nzn/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://doxo.recruiterbox.com/jobs/fk01nzn/'>
     Data Analyst - SEM at doxo
 </a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
@@ -483,10 +487,6 @@
       Technical Account Manager / Data Analyst (m/w/d) - Integrations & Reportings - Searchmetrics GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698313723-principal-analyst-statistical-programming'>Biogen Principal Analyst, Statistical Programming | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 
